--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,13 @@ body {
 
 .navigation {
 	width: 25%;
-	height: 100%;
+	height: 5058.4px;
 	position: fixed;
 	z-index: 1;
 	top: 0;
 	left: 0;
 	background-color: #0769ad;
+	box-shadow: 0px 0px 10px rgba(83, 83, 83, 0.9);
 }
 
 
